syntax = "proto3";

import "google/protobuf/empty.proto";

package coldmod_msg.proto.ops;

message OpsStatus {
    bool ok = 1;
}

service Ops {
 rpc status(google.protobuf.Empty) returns (OpsStatus);
 rpc reset_state(google.protobuf.Empty) returns (google.protobuf.Empty);
}
